# Bacteria

./: CMakeLists.txt  CMakeLists.txt~  GLOSARIO.txt  README.md  ai.c  animaciones.c  bacterias.c  bacterias.h  game.c  globales.c  icon.res  main.c  make.bat  menu.c  movimientos.c  xml.c  xml.c~
font/: mv_boli.pcx  mv_boli_12.pcx
imagenes/: Thumbs.db
imagenes/menu/: Thumbs.db
